--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rainyun-app-web",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,14 +15,15 @@
     "release:publish": "node scripts/release-publish.mjs"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.884.0",
     "@arco-design/web-vue": "^2.57.0",
+    "@aws-sdk/client-s3": "^3.884.0",
     "@capacitor/android": "^8.1.0",
     "@capacitor/app": "^8.0.1",
     "@capacitor/core": "^8.1.0",
     "@capacitor/keyboard": "^8.0.0",
     "@capacitor/share": "^8.0.1",
     "@capacitor/status-bar": "^8.0.1",
+    "@motionone/dom": "^10.18.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
